--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,36 +13,35 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Set up Go 1.x
-      uses: actions/setup-go@v2
-      with:
-        go-version: ^1.15
-      id: go
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.15
+        id: go
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
 
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
-    - run: mkdir -p ./bin      
+      - name: Get dependencies
+        run: |
+          go get -v -t -d ./...
+          if [ -f Gopkg.toml ]; then
+              curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+              dep ensure
+          fi
 
-    - name: Build go-bots
-      run: go build -ldflags "-s -w" -o ./mc-bots
+      - name: Build go-bots
+        run: go build -ldflags "-s -w" -o ./mc-bots
 
-    - name: Compress go-bots
-      uses: gacts/upx@master
-      with:
-        file: './mc-bots'
-        upx_args: '-9'
+      - name: Compress go-bots
+        uses: gacts/upx@master
+        with:
+          file: './mc-bots'
+          upx_args: '-9'
 
-    - name: Upload go-bots
-      uses: actions/upload-artifact@v2
-      with:
-        name: go-bots
-        path: ./bin
+      - name: Upload go-bots
+        uses: actions/upload-artifact@v2
+        with:
+          name: go-bots
+          path: ./mc-bots
 
