add use_proxies option + some other changes

--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,11 @@
-host: 127.0.0.1
+host: 0.0.0.0
 port: 25565
 protocol: 754
 
+use_proxies: false
 proxies: proxies.txt
+
+reuse_name: false # it will always use same name per IP
 connections: 150
 slow_cooldown: 5000 # milliseconds
 fast_cooldown: 250 # ms, this cooldown is used when proxy responds with error
